jboot-1.2.0:
新增：新增 JbootShiroCacheManager ，用于 给shiro.ini 进行配置使用 Jboot 默认缓存
新增：EnableActionCache 和 ActionCacheClear 注解，用于对action进行配置高速页面缓存
新增：给JbootModel 添加 copyModel 方法，用于rpc对象传输时modifys丢失 无法保存的的问题
修复：分布式配置文件启用是，读取分布式配置文件错误的问题
修复：当分布式任务执行间隔小于60秒时，可能存在一个任务在多个系统执行的问题
修复：ClassScanner有中文路径时，扫描不到class的问题
修复：修复由于Jboot的自定义session没有实现getAttributeNames，使用Jfinal 的 SessionInViewInterceptor 会报错的问题
优化：删除 undertow server 对 Jfinal 内部数据的初始化过程
优化：当传入缓存时间为0 或者 小于0时，默认为永久缓存
优化：执行package指令时，同步业务jar拷贝到 app 的 lib 目录中
优化：更新guava、fastjson、opentracing等到最新版本


jboot-1.1.9:
新增：Columns实现序列化，支持RPC直接远程传入Columns。
修复：JbootRedis的getWithoutSerialize方法返回空数据出现NullPointerException异常的问题。
修复：JbootModel 通过 fastjson 序列化的时候没有排除某些私有方法而序列化异常的问题。
优化：重构Swagger模块，移除Jboot自定义Swagger注解，添加Swagger原生注解支持。
优化：更新sharding-jdbc到2.0.1版本，更新 fastjson 到1.2.43版本。


jboot-1.1.8:
新增：JbootCacheManager 通过配置文件直接获取 JbootCache 的方法，用于不同的场景调用不同的缓存。
新增：JbootIllegalConfigException 异常类，用于给出配置文件错误的提示。
新增：JbootRedis 新增 getWithoutSerialize 方法，用于读取一些由redis生成的非序列化数据。
修复：自定义JFinal指令的时候，可能存在同一个页面下多个相同的指令出现数据污染的问题。
优化：重构 Jbootmq 模块，移动channel配置到 jboot.mq.channel。
优化：重构 ehredis 缓存模块，当不配置mq channel的时候不再抛出异常。


jboot-1.1.7:
优化：重构 JbootDirectiveBase 自定义指令，使得 getParam 更加简洁好用
优化：删除 JbootVoModel 和其相关工具
优化：完善 fastjson 序列化，新增 kryo 序列化配置的支持


jboot-1.1.6:
修复：JbootAppListenerManager 和 JbootInjectManager初始化相互调用的问题。
修复：Jfinal renderJson() 由于存放了request对象导致无法正常渲染的问题。


jboot-1.1.5:
新增：自定义DataSource的支持，同时不影响sharding-jdbc的使用。
新增：默认的sql模板路径，默认路径为classPath。
新增：onGuiceConfigure配置函数，方便用户自己配置AOP的相关拦截。
修复：dubbo rpc 无法发现jboot序列化的问题


jboot-1.1.4:
修复：JbootModel.cacheTime(time) 设置缓存失效时间不起作用的问题。
优化：重构hystrix降级，修改JbootHystrixFallbackFactory为JbootHystrixFallbackLisntener


jboot-1.1.3:
新增：rpc 序列化自定义配置
新增：rpc hystrix 启用开关配置和相关demo测试
新增：rpc hystrix 超时时间配置和相关demo测试
新增：添加数据库缓存失效时间的支持，默认失效时间为24小时。

修复：Jboot在启动的时候会触发两次onJbootStarted的问题。
修复：数据库删除一个不存在的id的时候可能存在空指针异常的问题。

优化：升级motan到最新版本1.1.0，并修复consul1.0无法注册的问题
优化：默认使用netty4作为motan的rpc底层框架
优化：合并JbootKits和ClassNewer为Classkits。

